# DHBW-Sorting

./: .gitignore  CMakeLists.txt  Main  README.md
.cmake/api/v1/reply/: cache-v2-cebe25ec51c7ff9ed3c6.json  cmakeFiles-v1-77be567fcf0a395fb5a2.json  codemodel-v2-1af86b678b39a41f1484.json  index-2022-11-16T19-28-40-0513.json  index-2022-11-20T15-05-22-0040.json  target-Main-6575f2fed19063f358f4.json
src/: arrays.c  arrays.h  bench.c  bench.h  main.c  sort.h
src/sort/: bogo.c  bozo.c  bubble.c  gnome.c  insertion.c  merge.c  quick.c  radix.c  selection.c  shell.c
